syntax = "proto3";

package processor.v1;

// Metadata from a processor (own or dependency)
message Metadata {
  map<string, string> metadata = 1;  // Key-value metadata
}

// Request envelope for processors
message ProcessorRequest {
  bytes payload = 1;                  // opaque data (engine-defined)
  map<string, Metadata> metadata = 2; // nested metadata structure (processor_name -> metadata)
}

// Structured error for uniform handling
message ErrorDetail {
  int32 code = 1;                     // app-specific error code
  string message = 2;                 // human-readable description
}

// Response envelope for processors
message ProcessorResponse {
  oneof outcome {
    bytes next_payload = 1;           // success result
    ErrorDetail error = 2;            // error result
  }
  map<string, Metadata> metadata = 3; // nested metadata for chaining and enrichment
}

// Canonical processor service definition
service Processor {
  rpc Process(ProcessorRequest) returns (ProcessorResponse);
}
